# cfcgi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.rst  cfcgi-config.cmake  fcgi.sln  index.html  params.json
code/: Application.cpp  Application.hpp  Authorizer.hpp  CMakeLists.txt  Gateway.cpp  Gateway.hpp  Headers.cpp  Headers.hpp  HttpBasicAuthorizer.hpp  Request.hpp  Response.hpp  Role.hpp  fcgi.c  fcgi.h  fcgi.hpp  fcgi.vcproj  ipstream.c  ipstream.h  istream.hpp  iwire.c  iwire.h  ostream.hpp  owire.c  owire.h  types.h
demo/: CMakeLists.txt  demo.cpp  demo.vcproj  lighttpd.conf
demo/nix/: CMakeLists.txt  prefork-server.cpp  prefork-server.hpp  sample-http-basic-authorizer.cpp
demo/win/: CMakeLists.txt  prespawn-server.cpp  prespawn-server.hpp  sample-http-basic-authorizer.cpp
help/: Doxyfile
